[workspace]
resolver = "2"
members = ["casino"]

[workspace.dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-value = "=7.0.17"
serde = { version = "1.0.152", features = ["derive"] }
sha3 = "0.10.8"
hex = "0.4.3"
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git", rev = "32c047f7891e08503019302b0258c17c2c7c4180" }

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
